feat: adding /calls/statuses endpoint
